# leptos_wasi

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  run_tests.sh  rustfmt.toml
.github/workflows/: main.yaml
examples/counter/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  rust-toolchain.toml  spin.toml
examples/counter-p3/: Cargo.toml  Makefile  README.md  build.rs  spin.toml
examples/counter-p3/src/: app.rs  main.rs
examples/counter/.spin/: sqlite_key_value.db
examples/counter/.spin/logs/: counter_stdout.txt
examples/counter/src/: app.rs  lib.rs  main.rs  routes.rs  server.rs  storage.rs
examples/counter/src/pages/: home.rs
examples/spin-counter/: Cargo.toml  README.md  spin.toml
examples/spin-counter-p3/: .gitignore  Cargo.toml  README.md  spin.toml
examples/spin-counter-p3/src/: app.rs  main.rs  server.rs
examples/spin-counter/src/: app.rs  server.rs
src/: executor.rs  handler.rs  lib.rs  request.rs  response.rs  utils.rs
tests/: e2e.rs  spin.toml
tests/test-app/: Cargo.toml
tests/test-app/src/: app.rs  server.rs
tests/test-app/static/: app.html  app.js  app.wasm
