[package]
name = "counter"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Leptos application running as a WASIp3 Component"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
bytes = "1.7.2"
console_error_panic_hook = "0.1"
futures = "0.3.30"
hydration_context = { version = "0.3.0" }
leptos = { version = "0.8.9" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.7" }
leptos_wasi = { path = "../..", default-features = false, features = ["wasip3"], optional = true }
server_fn = { version = "0.8.7", features = ["axum-no-default"] }
spin-sdk = { version = "6.0.0", optional = true }
wasip3 = { version = "0.6.0", features = ["http-compat"], optional = true }
wasm-bindgen = { version = "=0.2.103", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:spin-sdk",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "counter"
tailwind-input-file = "input.css"
assets-dir = "public"

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-target-dir = "target/server"
