[package]
name = "counter"
version = "0.1.0"
edition = "2024"
rust-version = "1.93.0"
authors = ["codeitlikemiley <codeitlikemiley@gmail.com>"]
description = "A Leptos application running as a WASIp3 Component"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
bytes = "1.7.2"
console_error_panic_hook = "0.1"
futures = "0.3.30"
hydration_context = { version = "0.3.0" }
leptos = { version = "0.8.19" }
leptos_meta = { version = "0.8.6" }
leptos_router = { version = "0.8.13" }
leptos_wasi = { path = "../..", default-features = false, features = ["wasip3"], optional = true }
server_fn = { version = "0.8.12", features = ["axum-no-default"] }
spin-sdk = { version = "6.0.0", optional = true }
wasip3 = { version = "0.6.0", features = ["http-compat"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }

[features]
hydrate = [
  "leptos/hydrate",
  "dep:wasm-bindgen",
  "dep:web-sys",
]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "dep:leptos_wasi",
  "dep:wasip3",
  "dep:spin-sdk",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "counter"
tailwind-input-file = "input.css"
assets-dir = "public"

# == Hydrate (client)
lib-profile-release = "wasm-release"
lib-features = ["hydrate"]

# == SSR
bin-profile-release = "wasm-release"
bin-target-triple = "wasm32-wasip2"
bin-features = ["ssr"]
bin-target-dir = "target/server"

[patch.crates-io]
server_fn = { path = "../../../leptos_src/server_fn" }
throw_error = { path = "../../../leptos_src/any_error" }
leptos = { path = "../../../leptos_src/leptos" }
leptos_dom = { path = "../../../leptos_src/leptos_dom" }
leptos_meta = { path = "../../../leptos_src/meta" }
leptos_router = { path = "../../../leptos_src/router" }
tachys = { path = "../../../leptos_src/tachys" }
hydration_context = { path = "../../../leptos_src/hydration_context" }
leptos_integration_utils = { path = "../../../leptos_src/integrations/utils" }
any_spawner = { path = "../../../leptos_src/any_spawner" }
leptos_macro = { path = "../../../leptos_src/leptos_macro" }

