[package]
name = "spin-counter"
version = "0.1.0"
edition = "2021"
rust-version = "1.88.0"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
any_spawner = { version = "0.3.0", features = ["futures-executor"] }
anyhow = "1"
console_error_panic_hook = "0.1"
leptos = { version = "0.8.9" }
leptos_meta = { version = "0.8.5" }
leptos_router = { version = "0.8.7" }
leptos_wasi = { path = "../..", default-features = false, features = ["wasip3"], optional = true }
spin-sdk = { version = "6.0.0", optional = true }
wasi = { version = "=0.13.1", optional = true }
wasip3 = { version = "0.6.0", features = ["http-compat"], optional = true }
wasm-bindgen = { version = "=0.2.103", optional = true }
web-sys = { version = "0.3", features = ["Storage", "Window"], optional = true }

[workspace]

[features]
csr = ["leptos/csr"]
hydrate = ["leptos/hydrate", "dep:wasm-bindgen", "dep:web-sys"]
ssr = [
  "leptos/ssr",
  "leptos_meta/ssr",
  "leptos_router/ssr",
  "leptos/spin",
  "dep:spin-sdk",
  "dep:leptos_wasi",
  "dep:wasip3",
]

[package.metadata.leptos]
output-name = "spin_counter"
tailwind-input-file = "input.css"
assets-dir = "public"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
